@@ -84,6 +84,18 @@ is $job->info->{state},  'failed',           'job is no longer active';
 is $job->info->{result}, 'Worker went away', 'right result';
 } # end SKIP
 
+SKIP: { skip 'Minion workers do not support fork emulation', 3 if HAS_PSEUDOFORK;
+# Repair abandoned job in minion_foreground queue (have to be handled manually)
+$worker->register;
+$id = $minion->enqueue('test', [], {queue => 'minion_foreground'});
+$job = $worker->dequeue(0, {queues => ['minion_foreground']});
+is $job->id, $id, 'right id';
+$worker->unregister;
+$minion->repair;
+is $job->info->{state},  'active', 'job is still active';
+is $job->info->{result}, undef,    'no result';
+} # end SKIP
+
 my ($id2, $id3, $finished);
 SKIP: { skip 'Minion workers do not support fork emulation', 3 if HAS_PSEUDOFORK;
 # Repair old jobs
