@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Ignore missing workers for jobs in the minion_foreground named queue to
+    make debugging very slow jobs easier.
 
 4.002     2018-10-03 13:58:15 EDT
   - Optimize repair query (yrjustice, #15, #16)
